Sun Jul  7 14:15:39 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* DRenderer.s: Encode offsets explicitly as offsets.  Update FSF
	address.
	* COPYING: Update FSF address.
	* Makefile (clean,dist-clean): Ignore rm errors.

Fri May 15 20:57:00 CST 2012  Christopher Martin  <belles@internode.on.net>

	* Modified the 16-bit sound handler 'LinearHandlerCode' and support
	functions so that it is safe to be called in IRQ mode with interrupts
	enabled.

Fri May 11 23:40:00 CST 2012  Christopher Martin  <belles@internode.on.net>

	* Corrected a bug causing catastrophic failure of 8-bit streaming.

Mon Apr 23 01:18:00 CST 2012  Christopher Martin  <belles@internode.on.net>

	* Tidied and slightly improved DRender.h and DRender.s based on
	experience of examining <libunixlib/sound/dsp.c>.
	* A few corrections to the documentation in DocDRender.

Fri Apr 20 19:32:00 CST 2012  Christopher Martin  <belles@internode.on.net>

	* Addressed a grey area in the documentation concerning which 16-bit
	channel ordering, left-right or right-left, is "correct" and which is
	"swapped". The documentation and code now refer explicitly to either
	left-right or right-left. The default is declared to be right-left.
	* Added speculative code that adds some silence after a streamed file
	is closed. It appears on BeagleBoard RISC OS 5.18, a silent tail 3
	times the buffer length is required in order to avoid a nasty buzz if
	the file being played does not end in silence. The tail may in fact be
	smaller than this, depending on the buffer length or sample rate, but
	I found that 2 buffers worth of silence was not enough; 3 was. Iyonix
	RISC OS 5.18 exhibits the same problem but to a lesser degree. I
	haven't experimented enough to determine a precise formulation that is
	sure to work in all cases. And, of course, this code doesn't help when
	the DRender: filesystem isn't being used. This speculative code was
	then commented-out because it may have been responsible for a system